fix the container command config

--- a/.ebextensions/01-env-file.config
+++ b/.ebextensions/01-env-file.config
@@ -6,3 +6,8 @@ container_commands:
   01_run_key_generate:
     command: "php artisan key:generate"
     cwd: "/var/app/staging"
+
+  02_run_storage_link:
+    command: "sudo su"
+    command: "php artisan storage:link"
+    cwd: "/var/app/staging"
