--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ before_script:
 
 script:
   - vendor/bin/phpunit
+  # Search for PHP syntax errors.
+  - find -L . -path ./vendor -prune -o -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l
+  - vendor/bin/phpcs
 
 cache:
   directories:
@@ -44,7 +47,7 @@ deploy:
   region: "ap-northeast-1"
   app: "garyke-test-project"
   env: "Garyketestproject-env"
-  bucket_name: "104-aws-training-cicd-bucket/garyke/garyke-demo/"
+  bucket_name: "104-aws-training-cicd-bucket"
   on:
     branch: main
 
