--- a/.ebextensions/01-env-file.config
+++ b/.ebextensions/01-env-file.config
@@ -8,6 +8,6 @@ container_commands:
     cwd: "/var/app/staging"
 
   02_run_storage_link:
-    command: "sudo su"
-    command: "php artisan storage:link"
+    command: "sudo chmod -R 755  /var/app/staging/storage/app/public"
+    command: "ln -s /var/app/current/storage/app/public /var/app/current/public/storage"
     cwd: "/var/app/staging"
