--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ deploy:
   app: "garyke-test-project"
   env: "Garyketestproject-env"
   bucket_name: "104-aws-training-cicd-bucket"
-  bucket_path: "/garyke/garyke-demo/"
+  bucket_path: "garyke/garyke-demo/"
   on:
     branch: main
 
