--- a/.env.testing
+++ b/.env.testing
@@ -16,3 +16,5 @@ DB_DATABASE=homestead
 DB_USERNAME=root
 DB_PASSWORD=
 
+AWS_DEFAULT_REGION="ap-northeast-1"
+AWS_BUCKET="104-aws-training-cicd-bucket"
