--- a/.ebextensions/01-env-file.config
+++ b/.ebextensions/01-env-file.config
@@ -7,3 +7,7 @@ container_commands:
     command: "php artisan key:generate"
     cwd: "/var/app/staging"
 
+  02_run_key_generate:
+    command: "php artisan migrate"
+    cwd: "/var/app/staging"
+
